--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
     "@deploysentinel/playwright": "^0.3.3",
-    "@playwright/test": "^1.31.2",
+    "@playwright/test": "^1.40.0",
     "@snaplet/copycat": "^0.3.0",
     "@types/dompurify": "^2.4.0",
     "@types/formidable": "^3.4.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "c8": "^7.13.0",
     "dotenv-checker": "^1.1.5",
     "husky": "^8.0.0",
@@ -41,7 +43,7 @@
     "jsdom": "22.1.0",
     "prettier": "^2.8.6",
     "tsc-absolute": "1.0.1",
-    "typescript": "4.9.5",
+    "typescript": "^5.3.0",
     "vitest": "^0.31.1",
     "vitest-mock-extended": "^1.1.3"
   },
