--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "clean": "find . -name node_modules -o -name .next -o -name .turbo -o -name dist -type d -prune | xargs rm -rf",
     "db-seed": "turbo run db-seed",
     "db-studio": "yarn prisma studio",
-    "dev": "turbo run dev --scope=\"@quillsocial/web\"",
+    "dev": "turbo run dev --filter=@quillsocial/web",
     "env-check:common": "dotenv-checker --schema .env.example --env .env",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prisma": "yarn workspace @quillsocial/prisma prisma",
-    "start": "turbo run start --scope=\"@quillsocial/web\"",
+    "start": "turbo run start --filter=@quillsocial/web",
     "type-check": "turbo run type-check",
     "type-check:ci": "turbo run type-check:ci --log-prefix=none",
     "app-store-cli": "yarn workspace @quillsocial/app-store-cli",
