update linkedin api

--- a/.env.example
+++ b/.env.example
@@ -108,3 +108,14 @@ TIKTOK_CLIENT_SECRET=
 GCP_STORAGE_SERVICE_ACCOUNT='{}'
 GCP_BUCKET_NAME='your-bucket-name'
 AUTH_DEBUG=1
+
+# --- Synced missing/updated config ---
+UNSPLASH_ACCESS_KEY=
+STRIPE_PER_USER_PRICE_ID=
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+# --- End synced config ---
+# --- LinkedIn Keys ---
+LINKEDIN_CLIENT_ID=
+LINKEDIN_CLIENT_SECRET=
+# --- End LinkedIn Keys ---
