activate xconsumerkeys app

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,11 @@ NEXTAUTH_COOKIE_DOMAIN=""
 
 CRON_API_KEY='your-cron-api-key'
 CRON_ENABLE_APP_SYNC=false
+
+
+# Application Key for symmetric encryption and decryption
+# must be 32 bytes for AES256 encryption algorithm
+# You can use: `openssl rand -base64 24` to generate one
 MY_APP_ENCRYPTION_KEY=your-encryption-key
 
 SEND_FEEDBACK_EMAIL=""
