--- a/packages/app-store/xconsumerkeyssocial/package.json
+++ b/packages/app-store/xconsumerkeyssocial/package.json
@@ -7,7 +7,8 @@
   "description": "",
   "dependencies": {
     "@quillsocial/prisma": "*",
-    "react-hook-form": "^7.43.3"
+    "react-hook-form": "^7.43.3",
+    "twitter-api-v2": "^1.15.2"
   },
   "devDependencies": {
     "@quillsocial/types": "*"
