--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/formidable": "^3.4.3",
     "city-timezones": "^1.2.1",
     "classnames": "^2.3.2",
+    "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.6.0",
     "eslint": "^8.34.0",
     "formidable": "^3.5.1",
