--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "env-check:common": "dotenv-checker --schema .env.example --env .env",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prisma": "yarn workspace @quillsocial/prisma prisma",
+    "prisma:studio": "yarn workspace @quillsocial/prisma prisma studio",
     "start": "turbo run start --filter=@quillsocial/web",
     "type-check": "turbo run type-check",
     "type-check:ci": "turbo run type-check:ci --log-prefix=none",
