--- a/.env.example
+++ b/.env.example
@@ -108,6 +108,18 @@ LINKEDIN_CLIENT_SECRET=
 TIKTOK_CLIENT_ID=
 TIKTOK_CLIENT_SECRET=
 
+# --- Tawk.to Live Chat Configuration ---
+# Get these from your Tawk.to dashboard at https://dashboard.tawk.to/
+# Property ID can be found in Admin > Property Settings
+# Widget ID can be found in Admin > Channels
+NEXT_PUBLIC_TAWK_TO_PROPERTY_ID=
+NEXT_PUBLIC_TAWK_TO_WIDGET_ID=
+# Optional: Enable secure mode for user authentication
+NEXT_PUBLIC_TAWK_TO_SECURE_MODE=false
+# Required if secure mode is enabled - your site's API key
+TAWK_TO_API_KEY=
+# --- End Tawk.to Configuration ---
+
 GCP_STORAGE_SERVICE_ACCOUNT='{}'
 GCP_BUCKET_NAME='your-bucket-name'
 AUTH_DEBUG=1
