fix facebook build

--- a/packages/app-store/facebooksocial/package.json
+++ b/packages/app-store/facebooksocial/package.json
@@ -6,8 +6,7 @@
   "main": "./index.ts",
   "description": "",
   "dependencies": {
-    "@quillsocial/prisma": "*",
-
+    "@quillsocial/prisma": "*"
   },
   "devDependencies": {
     "@quillsocial/types": "*"
